force-app/main/default/objects/Referentiel_alarme__c/Referentiel_alarme__c.object-meta.xml
<CustomObject>
    <label>Référentiel alarme</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de Référentiel alarme</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référentiel alarme</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>