force-app/main/default/objects/Referentiel_alarme__c/fields/Consigne__c.field-meta.xml
<CustomField>
    <fullName>Consigne__c</fullName>
    <label>Consigne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Le panéliste semble ne pas avoir beaucoup bougé. Appeler le panéliste pour vérifier qu&apos;il a bien eu son pager avec lui toute la journée.</fullName>
            </value>
            <value>
                <fullName>Le pager semble être éteint. Appeler le panéliste pour vérifier qu&apos;il a bien respecté les règles de participation (pager allumé et chargé).</fullName>
            </value>
            <value>
                <fullName>Le pager semble être éteint depuis trop longtemps. Appeler le panéliste pour rappeler les règles de participation (pager allumé et chargé).</fullName>
            </value>
            <value>
                <fullName>L’indice qualité remonté par le setmeter est bas. Appeler le panéliste pour vérifier l’installation du setmeter et les habitudes d&apos;écoutes qui pourraient expliquer le niveau du Snap Quality.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>