force-app/main/default/objects/Referentiel_alarme__c/fields/Id_alarme__c.field-meta.xml
<CustomField>
    <fullName>Id_alarme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id alarme</label>
    <length>33</length>
    <type>Text</type>
</CustomField>