force-app/main/default/objects/Referentiel_alarme__c/fields/ID_alarme_DSI__c.field-meta.xml
<CustomField>
    <fullName>ID_alarme_DSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID alarme DSI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>