force-app/main/default/objects/Referentiel_alarme__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <label>Libellé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absence mouvement</fullName>
            </value>
            <value>
                <fullName>Absence collecte</fullName>
            </value>
            <value>
                <fullName>Pager OFF</fullName>
            </value>
            <value>
                <fullName>Pager éteint trop longtemps</fullName>
            </value>
            <value>
                <fullName>Setmeter Indice qualité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>