force-app/main/default/objects/Referentiel_alarme__c/fields/Niveau_alarme__c.field-meta.xml
<CustomField>
    <fullName>Niveau_alarme__c</fullName>
    <label>Niveau alarme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>HOUSEHOLD</fullName>
            </value>
            <value>
                <fullName>MEMBER</fullName>
            </value>
            <value>
                <fullName>METER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>