force-app/main/default/objects/Referentiel_alarme__c/fields/RefAlarme_ExtId_SIP__c.field-meta.xml
<CustomField>
    <fullName>RefAlarme_ExtId_SIP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>RefAlarme_ExtId_SIP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>