force-app/main/default/objects/Referentiel_alarme__c/fields/Sous_type_de_controle_a_renseigner__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_de_controle_a_renseigner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sous type de controle a renseigner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>