force-app/main/default/objects/Referentiel_alarme__c/fields/Type_de_controle_a_renseigner__c.field-meta.xml
<CustomField>
    <fullName>Type_de_controle_a_renseigner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type de controle a renseigner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>