force-app/main/default/objects/Referentiel_alarme__c/listViews/Toutes_les_alarmes.listView-meta.xml
<ListView>
    <fullName>Toutes_les_alarmes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les alarmes</label>
</ListView>